plugins {
	id 'org.springframework.boot' version '2.7.3'
	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
	id 'java'
}

group = 'com.innovation'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	runtimeOnly 'com.h2database:h2'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'mysql:mysql-connector-java'
	annotationProcessor 'org.projectlombok:lombok'

	//Swagger setting
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'

	//s3
	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'

	//OAuth2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	//Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5' //로그인 동적view를 위한 타임리프

	//JWT
	compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'


	//Selenium-java
	implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'


	//Thumbnailator
	implementation 'net.coobird:thumbnailator:0.4.17'

	//websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket:2.6.1'
	implementation 'org.webjars:webjars-locator-core:0.48'
	implementation 'org.webjars:sockjs-client:1.5.1'
	implementation 'org.webjars:stomp-websocket:2.3.4'

}


tasks.named('test') {
	useJUnitPlatform()
}

jar {
	enabled = false
}
